--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-facebook-pixel": "^1.0.4",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
